# ALICE-GameEngine

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  GEMINI.md  LICENSE-COMMERCIAL  LLM_REFERENCE.md  README.ja.md  README.md
.github/workflows/: ci.yml
examples/: hello_engine.rs  mcp_controlled.rs  npc_chat.rs  physics_sandbox.rs  pong.rs  spinning_cube.rs
src/: ability.rs  animation.rs  app.rs  asset.rs  audio.rs  bridge.rs  camera_controller.rs  collision.rs  easy.rs  ecs.rs  engine.rs  fix128.rs  gpu.rs  gpu_mesh.rs  image_decode.rs  import.rs  input.rs  joint.rs  lib.rs  llm.rs  lod.rs  lut_postprocess.rs  math.rs  mcp.rs  navmesh.rs  network.rs  particle.rs  physics3d.rs  prelude.rs  query.rs  render_pipeline.rs  renderer.rs  resource.rs  scene2d.rs  scene_graph.rs  scene_io.rs  scripting.rs  sdf.rs  sdf_assets.rs  shader.rs  (+10 more)
src/xr/: mock.rs  mod.rs  provider.rs  stereo_window.rs  types.rs
templates/: fps.rs  platformer.rs  puzzle.rs  racing.rs  rhythm.rs  rpg.rs  sandbox.rs  space_trader.rs  strategy.rs  tower_defense.rs  visual_novel.rs
