[package]
name = "alice-game-engine"
version = "0.5.0"
edition = "2021"
license = "MIT"
description = "Hybrid mesh+SDF game engine — ECS, deferred renderer, spatial audio, UI, particles, navmesh"
repository = "https://github.com/ext-sakamoro/ALICE-GameEngine"
authors = ["Moroya Sakamoto <sakamoro@alicelaw.net>"]
keywords = ["game-engine", "sdf", "ecs", "renderer", "audio"]
categories = ["game-engines", "graphics", "rendering"]

[features]
default = []
gpu = ["wgpu", "pollster", "bytemuck"]
window = ["winit", "gpu"]
sdf = []
audio = []
ui = []
particles = []
navmesh = []
full = ["window", "sdf", "audio", "ui", "particles", "navmesh"]

[dependencies]
glam = { version = "0.29", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"

# GPU renderer (optional)
wgpu = { version = "25", optional = true }
pollster = { version = "0.4", optional = true }
bytemuck = { version = "1.21", features = ["derive"], optional = true }

# Window (optional)
winit = { version = "0.30", optional = true }

[dev-dependencies]
approx = "0.5"

[[example]]
name = "hello_engine"
required-features = ["full"]

[[example]]
name = "spinning_cube"
required-features = ["full"]

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "symbols"

[profile.bench]
opt-level = 3
lto = "thin"
debug = false
codegen-units = 1
