[package]
name = "alice-game-engine"
version = "0.5.0"
edition = "2021"
license = "MIT OR LicenseRef-Commercial"
description = "Hybrid mesh+SDF game engine — ECS, deferred renderer, spatial audio, UI, particles, navmesh"
repository = "https://github.com/ext-sakamoro/ALICE-GameEngine"
authors = ["Moroya Sakamoto <sakamoro@alicelaw.net>"]
keywords = ["game-engine", "sdf", "ecs", "renderer", "audio"]
categories = ["game-engines", "graphics", "rendering"]

[features]
default = []
gpu = ["wgpu", "pollster", "bytemuck"]
window = ["winit", "gpu"]
sdf = []
audio = []
ui = []
particles = []
navmesh = []
ffi = []
python = ["ffi"]
godot = ["ffi"]
alice-shaders = ["alice-shader"]
full = ["window", "sdf", "audio", "ui", "particles", "navmesh", "alice-shaders"]

[dependencies]
glam = { version = "0.29", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
rayon = "1.10"
wide = "0.7"

# ALICE ecosystem (optional)
alice-shader = { git = "https://github.com/ext-sakamoro/ALICE-Shader.git", optional = true }

# GPU renderer (optional)
wgpu = { version = "25", optional = true }
pollster = { version = "0.4", optional = true }
bytemuck = { version = "1.21", features = ["derive"], optional = true }

# Window (optional)
winit = { version = "0.30", optional = true }

[dev-dependencies]
approx = "0.5"

[[bin]]
name = "mcp_server"
path = "src/bin/mcp_server.rs"

[[example]]
name = "hello_engine"
required-features = ["full"]

[[example]]
name = "spinning_cube"
required-features = ["full"]

[[example]]
name = "pong"
required-features = ["full"]

[[example]]
name = "physics_sandbox"
required-features = ["full"]

[[example]]
name = "npc_chat"

[[example]]
name = "mcp_controlled"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "symbols"

[profile.bench]
opt-level = 3
lto = "thin"
debug = false
codegen-units = 1
